working on spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ h2 {
   width:auto;
   flex-direction:column;
   flex-grow 3;
-  justify-content: space-around;
+/*  justify-content: space-around; */
 	color: #000;
 	text-align: cemter;
 	font-size: 1.2em;
@@ -44,7 +44,6 @@ a {
 nav{
   flex-direction:column;
   flex-grow: 1;
-  align-items:stretch;
   justify-content: space-between;
 	background-color: #fff;
   padding: 40px;
@@ -52,9 +51,9 @@ nav{
 	border-right: 1px solid rgba(227,227,227,.8);
 }
 
-.project-wrapper{
+.all-project-wrapper{
   flex-direction:row;
-	width: 50%;
+	width: 30%;
 	padding: 4%;
 }
 
